@@ -1,3 +1,7 @@
+2011-02-17  Steffen Kamper  <steffen@typo3.org>
+
+	* Fixed bug #17592: ExtDirect API calls are splitted in single requests and slows down page loading
+
 2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes
